--- a/dom-manipulation/styles.css
+++ b/dom-manipulation/styles.css
@@ -78,6 +78,6 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
-
+  width: auto;
+  margin-bottom: 1rem;
 }
